# easytournament

./: README.md  pyproject.toml
src/: tournament_manager.py
