[tool.poetry]
name = "easytournament"
version = "0.1.0"
description = "Software for aiding tournament planning"
authors = ["Eindride Ilmari Kjersheim <eindride.kjersheim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
